# VL-JEPA

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/datasets/: gsm8k.yaml  synthetic.yaml
configs/eval/: gsm8k.yaml  spider.yaml
configs/inference/: default.yaml
configs/train/: llm_jepa.yaml  lora_jepa.yaml  regular.yaml
configs/vl_jepa/: eval_classification.yaml  eval_retrieval.yaml  eval_selective_decoding.yaml  eval_vqa.yaml  pretrain_image_1f.yaml  pretrain_video_32f.yaml  pretrain_video_8f.yaml  sft_plm.yaml  smoke_tiny.yaml  train_decoder_caption.yaml
docs/: datasets.md  evaluation.md  faithfulness.md  llm_jepa_tutorial.md  roadmap_multimodal.md  training.md
llm_jepa/: __init__.py  cli.py  smoke.py
llm_jepa/evaluation/: __init__.py  embedding_analysis.py  generation_eval.py  metrics.py  spider_eval.py
llm_jepa/inference/: __init__.py  generate.py  serving.py
llm_jepa/modeling/: __init__.py  jepa_trainer.py  lora.py  special_tokens.py  tokenizer_setup.py
llm_jepa/training/: __init__.py  checkpointing.py  collators.py  dataset.py  losses.py  masks.py  train.py
llm_jepa/utils/: io.py  seed.py
scripts/: download_open_datasets.py  evaluate.py  infer.py  plot_latent_space.py  prepare_data.py  smoke_test.py  train.py
tests/: test_inference.py  test_losses.py  test_masks.py  test_metrics.py  test_open_downloaders.py  test_schemas.py  test_training_loop.py  test_vl_jepa_data.py  test_vl_jepa_model.py
vl_jepa/: __init__.py  cli.py
vl_jepa/data/: __init__.py  builders.py  collators.py  datasets.py  downloaders.py  manifests.py  schemas.py  transforms.py  video.py
vl_jepa/evaluation/: __init__.py  eval.py  metrics.py  ranking.py  selective_decoding.py  text_triplet.py
vl_jepa/inference/: __init__.py  infer.py
vl_jepa/modeling/: __init__.py  config.py  hf_auth.py  model.py  predictor.py  tokenizer.py  x_encoder.py  y_decoder.py  y_encoder.py
vl_jepa/training/: __init__.py  checkpointing.py  decoder.py  losses.py  train.py
vl_jepa/utils/: __init__.py  config.py  io.py  seed.py
