[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-jepa"
version = "0.1.0"
description = "Production-ready LLM-JEPA training, dataset preparation, inference, and evaluation toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LLM-JEPA Contributors" }]
dependencies = [
  "accelerate>=0.34",
  "datasets>=2.20",
  "evaluate>=0.4",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "omegaconf>=2.3",
  "peft>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "torch>=2.3",
  "tqdm>=4.66",
  "transformers>=4.44",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
llm-jepa = "llm_jepa.cli:app"

[tool.setuptools.packages.find]
include = ["llm_jepa*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
