[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vl-jepa"
version = "0.1.0"
description = "Paper-faithful VL-JEPA training, dataset preparation, inference, and evaluation toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "VL-JEPA Contributors" }]
dependencies = [
  "accelerate>=0.34",
  "datasets>=2.20",
  "evaluate>=0.4",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "omegaconf>=2.3",
  "peft>=0.12",
  "pillow>=10.0",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "tensorboard>=2.20.0",
  "torch>=2.3",
  "tqdm>=4.66",
  "transformers>=4.44",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
vl-jepa = "vl_jepa.cli:app"

[tool.setuptools.packages.find]
include = ["vl_jepa*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
